# RaspberryPI

./: .gitignore  README.md
CameraMotionDetect/: CMakeLists.txt  blob.cpp  blob.h  main.cpp  recorder.cpp  recorder.h  webcam.vcxproj  webcam.vcxproj.filters
CameraMotionDetect/x64/Debug/: vc143.idb  webcam.exe.recipe
CameraMotionDetect/x64/Debug/webcam.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  webcam.lastbuildstate
CameraMotionDetect/x64/Release/: WebCamMotionDetect.exe.recipe  WebCamMotionDetect.iobj  WebCamMotionDetect.ipdb  webcam.exe.recipe  webcam.iobj  webcam.ipdb
CameraMotionDetect/x64/Release/WebCamMo.199b7d12.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CameraMotionDetect/x64/Release/webcam.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  webcam.lastbuildstate
